// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable Renders correctly 1`] = `
<div
  className="MuiTableContainer-root"
>
  <table
    className="MuiTable-root makeStyles-table-1"
    role={null}
  >
    <thead
      className="MuiTableHead-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root MuiTableRow-head"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Nome
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Destinatário
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Sucesso
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Status
        </th>
      </tr>
    </thead>
    <tbody
      className="MuiTableBody-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body makeStyles-th-2"
          role="cell"
          scope="row"
        >
          Crédito pré-aprovado
        </th>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body"
        >
          25.000
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body"
        >
          23%
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body"
        >
          <div
            className="makeStyles-root-3"
          >
            <svg
              className="makeStyles-root-6 makeStyles-root-7 makeStyles-icon-4"
            >
              check.svg
            </svg>
            <p
              className="MuiTypography-root makeStyles-name-5 MuiTypography-body1"
            >
              Concluida
            </p>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable Renders correctly loading 1`] = `
<div
  className="MuiTableContainer-root"
>
  <table
    className="MuiTable-root makeStyles-table-1"
    role={null}
  >
    <thead
      className="MuiTableHead-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root MuiTableRow-head"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Nome
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Destinatário
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Sucesso
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Status
        </th>
      </tr>
    </thead>
    <tbody
      className="MuiTableBody-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body makeStyles-th-2"
          role="cell"
          scope="row"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": 120,
              }
            }
          />
        </th>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": 70,
              }
            }
          />
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": 30,
              }
            }
          />
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": 80,
              }
            }
          />
        </td>
      </tr>
      <tr
        className="MuiTableRow-root"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body makeStyles-th-2"
          role="cell"
          scope="row"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": 120,
              }
            }
          />
        </th>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": 70,
              }
            }
          />
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": 30,
              }
            }
          />
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": 80,
              }
            }
          />
        </td>
      </tr>
      <tr
        className="MuiTableRow-root"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body makeStyles-th-2"
          role="cell"
          scope="row"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": 120,
              }
            }
          />
        </th>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": 70,
              }
            }
          />
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": 30,
              }
            }
          />
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": 80,
              }
            }
          />
        </td>
      </tr>
      <tr
        className="MuiTableRow-root"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body makeStyles-th-2"
          role="cell"
          scope="row"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": 120,
              }
            }
          />
        </th>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": 70,
              }
            }
          />
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": 30,
              }
            }
          />
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": 80,
              }
            }
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
